--- a/src/styles/LocationWeatherInfo.css
+++ b/src/styles/LocationWeatherInfo.css
@@ -6,4 +6,16 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: #d2cdc7;
+    border-style: solid;
+    border-color: aliceblue;
+    color: aliceblue;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 1%;
+    font-family: sans-serif;
+}
+.city {
+    color: #d2cdc7;
+    font-size: xx-large;
 }
