--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,9 @@ code {
   justify-content: center;
   align-items: center;
   background-color: aliceblue;
+  min-height: 100vh;
+}
+
+.appMain {
+  align-self: flex-start;
 }
